--- a/package.json
+++ b/package.json
@@ -4,26 +4,29 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
+    "bootstrap": "^5.1.3",
+    "d3-ease": "^2.0.0",
+    "disqus-react": "^1.1.1",
+    "emailjs-com": "^3.2.0",
+    "google-map-react": "^2.1.10",
+    "lightweight-charts": "^4.1.1",
     "react": "^18.2.0",
     "react-animate-on-scroll": "^2.1.5",
     "react-bootstrap": "^1.6.4",
     "react-circular-progressbar": "^2.0.4",
     "react-countup": "^4.3.3",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^5.2.0",
     "react-icons": "^4.2.0",
     "react-move": "^6.4.0",
     "react-on-screen": "^2.1.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.28.1",
     "react-tabs": "^3.2.2",
+    "react-tradingview-embed": "^3.0.6",
+    "react-twitter-widgets": "^1.11.0",
     "react-typed": "^1.2.0",
-    "emailjs-com": "^3.2.0",
-    "google-map-react": "^2.1.10",
-    "d3-ease": "^2.0.0",
-    "disqus-react": "^1.1.1",
     "sass": "^1.49.10",
-    "bootstrap": "^5.1.3",
     "web-vitals": "^3.0.4"
   },
   "scripts": {
